--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
     <div class="">
       Refresh to play again
     </div>
-    www 🎲 App Brewery 🎲 com
+    <a href="https://www.linkedin.com/in/tyler-w-a2b7a8132/">LinkedIn</a>
   </footer>
 </html>
